syntax = "proto3";
package echo;

message SayRequest {
    string message = 1;
}

message SayResponse {
    string message = 1;
}

service EchoService {
    rpc Say (SayRequest) returns (SayResponse);
}
